--- a/themes/xenea/style.css
+++ b/themes/xenea/style.css
@@ -1989,15 +1989,14 @@ html[dir='rtl'] #sb_content_extra_info .editfacts {float:left;}
 #find-output p {border-top:1px solid #C3DFFF;font-weight:bold;margin:0;padding-top:10px;text-align:center;}
 #find-media {background-color:#C3DFFF;padding:5px;text-align:center;}
 #find-media span {border:0;font-weight:bold;margin:auto;padding:5px;}
-.find-media-dirs {border-bottom:1px solid #C3DFFF;padding:3px;}
-.find-media-media {border:1px solid #C3DFFF;overflow:hidden;margin:1px;padding:2px;}
-.find-media-thumb {clear:left;float:left;}
-.find-media-thumb img {width:50px;}
-.find-media-details {float:left;}
+#find-output .find-media-dirs {border-bottom:1px solid #C3DFFF;padding:3px;}
+#find-output .find-media-media {border:1px solid #C3DFFF;overflow:hidden;margin:1px;padding:2px;}
+#find-output .find-media-thumb {clear:left;float:left;}
+#find-output .find-media-details {float:left;}
 #find-output .find-media-details p {border:0;padding:0 5px 2px 5px;font-weight:normal;text-align:left;}
 #find-output .find-media-details div span {font-weight:normal;padding:0 5px 2px 5px;}
 #find-output p.find-media-title {font-weight:bold;}
-.find-media-details ul {padding:0;margin:0px 20px 10px 20px;list-style-type:none;}
+#find-output .find-media-details ul {padding:0;margin:0px 20px 10px 20px;list-style-type:none;}
 #find-facts-header .list_label {text-align:inherit;}
 
 /* ============== search.php ======================= */
